--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,24 +1,32 @@
 # This workflow will build a Java project with Maven
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: Java CI with Maven
+name: css 143 grader
 
 on:
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-
+    types: [opened, reopened]
+    
 jobs:
-  build:
+  run_tests:
 
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
+    - name: Set up JDK 13
       uses: actions/setup-java@v1
       with:
-        java-version: 1.8
+        java-version: 13
+    - name: Cache Maven packages
+      uses: actions/cache@v2
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-m2
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn -B test --file pom.xml
+      
