--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,7 +8,7 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-    types: [opened, reopened, edited]
+    types: [opened, reopened, synchronize]
     
 jobs:
   run_tests:
